tests/ui/parser/issues/issue-2354.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-2354.rs:15:52
   |
LL | fn foo() {
   |          - unclosed delimiter
LL |   match Some(10) {
   |                  - this delimiter might not be properly closed...
...
LL | }
   | - ...as it matches this but it has different indentation
...
LL |
   |                                                   ^

error: aborting due to 1 previous error

